package NCSProto;

message TTimeInterval {
    optional uint32 From = 1;
    optional uint32 To = 2;
    optional string HrInterval = 3;
}
